--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ enable_testing()
 set(CMAKE_C_FLAGS "-g -Wall -Werror -Wextra -Wpedantic")
 add_subdirectory(test)
 add_library(vml vm.c)
+target_compile_definitions(vml PRIVATE "UNIT_TEST")
 set_target_properties(vml PROPERTIES OUTPUT_NAME "vm")
 add_executable(vm vm.c)
